[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Egor"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
urllib3 = "^1.26.12"
translate = "^3.6.1"
telebot = "^0.0.5"
pytelegrambotapi = "^4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
